--- a/snack-1/index.html
+++ b/snack-1/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/script.js"></script>
+    <script src="/snack-1/script.js"></script>
 </body>
 </html>
